--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/native": "^7.0.14",
     "@shopify/react-native-skia": "^1.8.0",
     "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "^0.76.9",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
